[package]
name = "panda-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-raft = "0.6"
async-trait = "0.1"
bincode = "1"
futures = "0.3.17"
parking_lot = "0.11"
rocksdb = "0.17"
serde = "1"
thiserror = "1"
tracing = "0.1"

[dependencies.tarpc]
version = "0.27"
features = ["serde-transport", "serde-transport-bincode", "tcp"]

[dependencies.tokio]
version = "1"
features = ["io-std"]

[dependencies.sqlparser]
version = "0.12"
features = ["serde"]
